just little modifications, to get back in the pace slowly

--- a/injector/SConstruct
+++ b/injector/SConstruct
@@ -1,6 +1,6 @@
 env = Environment(
 	TARGET_ARCH='x86',
-	CPPPATH=r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/include', 
+	CPPPATH=[r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/include', r'C:/qt-everywhere-opensource-src-4.7.4/include'], 
 	LIBPATH=r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/lib.X86'
 )
 env.SharedLibrary(target='injected', source=['injected.cpp'], LIBS=['detours'], LINKFLAGS=['/export:TimedSleep'])
