--- a/injector/SConstruct
+++ b/injector/SConstruct
@@ -3,6 +3,6 @@ env = Environment(
 	CPPPATH=[r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/include', r'C:/qt-everywhere-opensource-src-4.7.4/include'], 
 	LIBPATH=r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/lib.X86'
 )
-env.SharedLibrary(target='injected', source=['injected.cpp'], LIBS=['detours'], LINKFLAGS=['/export:TimedSleep'])
+env.SharedLibrary(target='injected', source=['injected.cpp'], LIBS=['detours'], LINKFLAGS=['/export:TimedSleep'], CXXFLAGS=['/Zi'])
 
-env.Program(target='injector', source=['injector.cpp'], LIBS=['detours'])
+env.Program(target='injector', source=['injector.cpp'], LIBS=['detours'], CXXFLAGS=['/Zi'])
