--- a/injector/SConstruct
+++ b/injector/SConstruct
@@ -1,8 +1,9 @@
+DEBUG=False
 env = Environment(
 	TARGET_ARCH='x86',
 	CPPPATH=[r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/include', r'C:/qt-everywhere-opensource-src-4.7.4/include'], 
 	LIBPATH=r'C:/Program Files (x86)/Microsoft Research/Detours Express 3.0/lib.X86'
 )
-env.SharedLibrary(target='injected', source=['injected2.cpp'], LIBS=['detours'], LINKFLAGS=['/export:DllMain'], CXXFLAGS=['/Zi'])
+env.SharedLibrary(target='injected', source=['injected.cpp'], LIBS=['detours'], LINKFLAGS=['/export:DllMain'], CXXFLAGS=['/Zi'] if DEBUG else [])
 
-env.Program(target='injector', source=['injector.cpp'], LIBS=['detours'], CXXFLAGS=['/Zi'])
+env.Program(target='injector', source=['injector.cpp'], LIBS=['detours'], CXXFLAGS=['/Zi'] if DEBUG else [])
