correctly generating injected.dll from kindle.exe

--- a/HoneyPot/HoneyPot/HoneyPot.vcxproj.filters
+++ b/HoneyPot/HoneyPot/HoneyPot.vcxproj.filters
@@ -43,9 +43,21 @@
     <ClCompile Include="GeneratedFiles\Release\moc_honeypot.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="no_signals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_no_signals.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_no_signals.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="honeypot.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="no_signals.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
